# DeepCrawl-Chat

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  _README.md  deep_crawler.py  execusion.md  issue.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  python-app.yml
config/: settings.py
configs/: config.yaml
configs/core/: vector_store.yaml
configs/data_processing/: default.yaml
configs/database/: default.yaml  postgres.yaml
configs/embedding/: default.yaml
configs/llm/: default.yaml  google.yaml  groq.yaml  nvidia.yaml
configs/vectorstore/: default.yaml  quadrant.yaml
configs/vetorstore/: chroma.yaml  default.yaml
configs/worker/: default.yaml
docs/: TASKS.md  plan.md
notebooks/: chat_app.ipynb  data_information.ipynb  deep_crawler.py  web_crawl.ipynb
requirements/: base.txt  dev.txt
scripts/: load_existing_crawl.py
src/core/: __init__.py  base.py  interfaces.py
src/deep_crawl_chat/: config.py
src/deep_crawl_chat/api/: main.py
src/deep_crawl_chat/api/common/: __ini__.py
src/deep_crawl_chat/api/routes/: chat.py
src/deep_crawl_chat/core/: config.py
src/deep_crawl_chat/data_processing/: crawl_loader.py  loaders.py  processors.py
src/deep_crawl_chat/embeddings/: models.py
src/deepcrawl_chat/api/: main.py
src/deepcrawl_chat/chains/: retrieval.py
src/deepcrawl_chat/cli/: index_crawl.py
src/deepcrawl_chat/config/: __init__.py  config.py  schemas.py
src/deepcrawl_chat/core/: redis.py  utils.py
src/deepcrawl_chat/crawler/: WebCrawler.py  integration.py  schema.py  utils.py  web_crawler.py
src/deepcrawl_chat/data_processing/: __init__.py  crawl_loader.py  loaders.py  processors.py
src/deepcrawl_chat/embeddings/: __init__.py  nvidia_model.py
src/deepcrawl_chat/llm/: models.py
src/deepcrawl_chat/queue/: __init__.py  distributor.py  health.py  manager.py  metrics.py  schemas.py  status_tracker.py
src/deepcrawl_chat/schemas/: service_schema.py
src/deepcrawl_chat/services/: chat_service.py  crawler_service.py
src/deepcrawl_chat/utils/: __init__.py  error_handler.py  logging.py
src/deepcrawl_chat/vectorstores/: __init__.py  faiss_store.py  qdant_store.py
tests/: conftest.py  test_api.py  test_crawl_loader.py  test_crawler.py  test_integration.py
tests/queue/: test_distributor.py  test_health.py  test_manager.py  test_metrics.py  test_schemas.py  test_status_tracker.py
