[project]
name = "deepcrawl-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Shanjidul Islam Sadhin",email = "sadhin.aiub.cse@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "unstructured (>=0.17.2,<0.18.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "langchain-nvidia-ai-endpoints (>=0.3.9,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
