[project]
name = "deepcrawl-chat"
version = "0.1.2"
description = "Crawl a website and chat with it."
authors = [
    {name = "Shanjidul Islam Sadhin",email = "sadhin.aiub.cse@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "fastapi[all]>=0.115.12",
    "hydra-core>=1.3.2",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-text-splitters>=0.3.8",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "unstructured>=0.17.2",
]
